--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="Styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  
+
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;700&family=Inter:wght@400;500;600;700&display=swap"
@@ -17,6 +17,7 @@
 
 <body>
   <div id="root"></div>
+  <script src="https://cdn.tailwindcss.com"></script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
